using JDBC as property source

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,9 @@
 spring.application.name=spring-cloud-config-server
-spring.cloud.config.server.git.uri=https://github.com/parshuram-patil/spring-cloud-config
 server.port=8080
+
+spring.profiles.active=jdbc
+spring.datasource.url=jdbc:sqlserver://192.168.64.4:1433;databaseName=MyDB;trustServerCertificate=true
+spring.datasource.username=sa
+spring.datasource.password=MyPass
+spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
+spring.cloud.config.server.jdbc.default-label=latest
