--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,8 @@ repositories {
 
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation 'org.springframework.boot:spring-boot-starter-data-jdbc'
+	implementation 'com.microsoft.sqlserver:mssql-jdbc'
 	implementation 'org.springframework.cloud:spring-cloud-config-server:4.0.4'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
