api to save property

--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,10 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jdbc'
 	implementation 'com.microsoft.sqlserver:mssql-jdbc'
 	implementation 'org.springframework.cloud:spring-cloud-config-server:4.0.4'
+	implementation 'org.projectlombok:lombok:1.18.22'
+
+	annotationProcessor 'org.projectlombok:lombok:1.18.22'
+
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
