--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -14,4 +14,7 @@ spring:
   profiles:
     active: jdbc
 server:
-  port: '8080'
+  port: 8080
+client:
+  server:
+    url: http://localhost:7070/actuator/refresh
